--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
 body {
+    padding: 0;
+    margin: 0;
     color: #3f3f3f;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
@@ -10,7 +12,41 @@ h1 {
     font-weight: bold;
 }
 
+.header {
+    text-align: left;
+    padding-left: 2rem;
+    background-color: rgb(189, 189, 189);
+    width: 100%;
+    margin: 0px;
+    height: 4rem;
+    padding-top: 1rem;
+}
+
+.header h1 {
+    display: block;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+.header ul {
+    display: flex;
+}
+
+.header li {
+    display: block;
+    margin: 0 1.5rem;
+    list-style: none;
+    text-decoration: none;
+    transition: all 0.5s;
+}
+
+.header li:hover {
+    cursor: pointer;
+    text-decoration: underline;
+}
+
 .container {
+    margin-top: 2rem;
     margin-left: auto;
     margin-right: auto;
     text-align: left;
