--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
     color: #3f3f3f;
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Courier New', Courier, monospace;
     font-size: 14px;
     background-color: azure;
 }
