--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
     padding: 0;
     margin: 0;
-    color: #3f3f3f;
+    color: red;
     text-align: center;
     font-family: 'Courier New', Courier, monospace;
     font-size: 14px;
